--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Division Chief Ben Watson</h1>
-								<p>An addendum to my application for the position of Division Chief, Logistics with <a href="https://bouldercolorado.gov/government/departments/fire-rescue">Boulder Fire-Rescue</a></p>
-								<p>Click on a core value to read more of my thoughts</p>
+								<p>An addendum to my application for the position of Division Chief, Logistics @ <a href="https://bouldercolorado.gov/government/departments/fire-rescue">Boulder Fire</a></p>
+								<p>Click on a core value to learn more</p>
 							</div>
 						</div>
 						<nav>
