--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Division Chief Ben Watson</h1>
-								<p>An addendum to my application for the position of Division Chief, Logistics @ <a href="https://bouldercolorado.gov/government/departments/fire-rescue">Boulder Fire</a></p>
+								<p>An addendum to my application for the position of Division Chief, Logistics @ <a href="https://bouldercolorado.gov/government/departments/fire-rescue" target="_blank">Boulder Fire</a></p>
 								<p>Click on a core value to learn more</p>
 							</div>
 						</div>
@@ -98,7 +98,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Created by <a href="https://benwatson.info">me</a> and don't forget <a href="mailto:ben.r.watson@gmail.com?subject=You're Hired!&body=We%20loved%20your%20application%20and%20want%20to%20hire%20you.%20">this!</p>
+						<p class="copyright">&copy; Created by <a href="https://benwatson.info" target="_blank">me</a> and don't forget <a href="mailto:ben.r.watson@gmail.com?subject=You're Hired!&body=We%20loved%20your%20application%20and%20want%20to%20hire%20you.%20">this!</p>
 					</footer>
 
 			</div>
