--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Ben's Application Addendum</title>
+		<link rel="title" type="image/png" i class="fas fa-fire">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-lSHI86oFN+Ksh62ZOgURqYENZPBLoDc6cVc+CQaJjHF4k5HeL3hLr0d9G5PlMVC4zrUk6eg+F1ZlIl6lnTfFGw==" crossorigin="anonymous" />
