--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-lSHI86oFN+Ksh62ZOgURqYENZPBLoDc6cVc+CQaJjHF4k5HeL3hLr0d9G5PlMVC4zrUk6eg+F1ZlIl6lnTfFGw==" crossorigin="anonymous" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <script type="text/javascript">
+			var password = 'bw364';
+			var userPassword = prompt('This page now requires a password to view it:', '');
+			if (userPassword !== password) {
+					window.location = 'https://benwatson.info';
+			}
+	</script>
 	</head>
 	<body class="is-preload">
 
@@ -22,7 +29,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Division Chief Ben Watson</h1>
-								<p>An addendum to my application for the position of Division Chief, Logistics @ <a href="https://bouldercolorado.gov/government/departments/fire-rescue" target="_blank">Boulder Fire</a></p>
+								<p>An addendum to my application for the position of Division Chief, Logistics @ <a href="https://bouldercolorado.gov/government/departments/fire-rescue" target="_blank">Boulder Fire-Rescue</a></p>
 								<p>Click on a core value to learn more</p>
 							</div>
 						</div>
