--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <script type="text/javascript">
 			var password = 'bw364';
-			var userPassword = prompt('This page now requires a password to view it:', '');
+			var userPassword = prompt('Talk to Ben for the password:', '');
 			if (userPassword !== password) {
 					window.location = 'https://benwatson.info';
 			}
