--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <script type="text/javascript">
-			var password = 'bw364';
-			var userPassword = prompt('Talk to Ben for the password:', '');
+			var password = 'kanye';
+			var userPassword = prompt('Talk to Ben or take a guess:', '');
 			if (userPassword !== password) {
-					window.location = 'https://benwatson.info';
+					window.location = 'https://www.zdnet.com/article/more-than-1-in-3-people-have-tried-to-guess-someone-elses-password/';
 			}
 	</script>
 	</head>
