--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <script type="text/javascript">
 			var password = 'kanye';
-			var userPassword = prompt('Talk to Ben or take a guess:', '');
+			var userPassword = prompt('Talk to Ben for the password or take a guess:', '');
 			if (userPassword !== password) {
 					window.location = 'https://www.zdnet.com/article/more-than-1-in-3-people-have-tried-to-guess-someone-elses-password/';
 			}
